fix: fix spacing in articles list
I think it's upstream issue though

--- a/sass/font.scss
+++ b/sass/font.scss
@@ -12,3 +12,7 @@ body {
 .hack, .hack blockquote, .hack code, .hack em, .hack h1, .hack h2, .hack h3, .hack h4, .hack h5, .hack h6, .hack strong {
   font-family: $fonts;
 }
+
+main article {
+  margin-top: 1em;
+}
